# lid-driven-cavity-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lid_cavity_first_test  lid_cavity_second_test  requirements.txt
results/: simulation_info.txt
scripts/: check_divergence.py  common.py  compare_ghia.py  plot_pressure.py  plot_residual.py  plot_streamlines.py  plot_velocity.py  verify_bc.py
src/: csv_writer.cpp  csv_writer.h  io.cpp  io.h  main.cpp  matrix.h  simulation.cpp  simulation.h
